# wsws

./: Cargo.toml  package.json  pnpm-lock.yaml
src/: main.rs
templates/: index.html
